Actually fixed Appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,15 +4,13 @@ branches:
 
 install:
   - set QTDIR=C:\Qt\5.12.2\mingw73_32
-  - choco install -y InnoSetup
-  - set PATH=%QTDIR%\bin;C:\Qt\Tools\mingw530_32\bin;%PATH%;"C:\Program Files (x86)\Inno Setup 5"
+  - set PATH=%QTDIR%\bin;C:\Qt\Tools\mingw530_32\bin;%PATH%
 build_script:
   - qmake bsqmu.pro
   - mingw32-make
 after_build:
   - windeployqt release/bsqmu.exe
   - cmd: cp LICENSE release/LICENSE.txt"
-  - iscc innosetup.iss
   - rm release/*.o
   - rm release/*.cpp
 
