--- a/.travis.yml
+++ b/.travis.yml
@@ -15,16 +15,15 @@ install:
 script:
   - /opt/qt58/bin/qmake PREFIX=/usr
   - make
-  - # Generate AppImage
   - sudo apt-get -y install checkinstall
   - sudo checkinstall --pkgname=app --pkgversion="1" --pkgrelease="1" --backup=no --fstrans=no --default --deldoc
-  - mkdir -p bsqmu/usr/bin ; cd bsqmu
+  - mkdir -p appdir/usr/bin ; cd appdir
   - dpkg -x ../app_1-1_amd64.deb . ; find .
   - mv ./usr/local/bin/* ./usr/bin/ || true
   - cd ..
   - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/6/linuxdeployqt-6-x86_64.AppImage"
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
-  - ./linuxdeployqt*.AppImage ./bsqmu/usr/opt/* -bundle-non-qt-libs
-  - ./linuxdeployqt*.AppImage ./bsqmu/usr/opt/* -appimage
+  - ./linuxdeployqt*.AppImage ./appdir/usr/opt/* -bundle-non-qt-libs
+  - ./linuxdeployqt*.AppImage ./appdir/usr/opt/* -appimage
   - curl --upload-file ./bsqmu*.AppImage https://transfer.sh/bsqmu-git.$(git rev-parse --short HEAD)-x86_64.AppImage
