--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,19 @@
 language: cpp
-dist: trusty
+dist: xenial
 compiler: g++
 sudo: required
 
 before_install:
-  - sudo add-apt-repository ppa:beineri/opt-qt58-trusty -y
+  - sudo add-apt-repository ppa:beineri/opt-qt-5.12.3-xenial -y
   - sudo apt-get update
 
 install:
-  - sudo apt-get install qt58base qt58svg qt58charts-no-lgpl qt58xmlpatterns
-  - source /opt/qt58/bin/qt58-env.sh
+  - sudo apt-get install qt512base qt512xmlpatterns
+  - source /opt/qt512/bin/qt512-env.sh
 
 
 script:
-  - /opt/qt58/bin/qmake PREFIX=/usr
+  - /opt/qt512/bin/qmake PREFIX=/usr
   - make
-  - sudo apt-get -y install checkinstall
-  - sudo checkinstall --pkgname=app --pkgversion="1" --pkgrelease="1" --backup=no --fstrans=no --default --deldoc
-  - mkdir -p appdir/usr/bin ; cd appdir
-  - dpkg -x ../app_1-1_amd64.deb . ; find .
-  - mv ./usr/local/bin/* ./usr/bin/ || true
-  - cd ..
-  - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/6/linuxdeployqt-6-x86_64.AppImage"
-  - chmod a+x linuxdeployqt*.AppImage
-  - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
-  - ./linuxdeployqt*.AppImage ./appdir/usr/opt/* -bundle-non-qt-libs
-  - ./linuxdeployqt*.AppImage ./appdir/usr/opt/* -appimage
-  - curl --upload-file ./bsqmu*.AppImage https://transfer.sh/bsqmu-git.$(git rev-parse --short HEAD)-x86_64.AppImage
+  - dpkg -x ./app_1-1_amd64.deb . ; find .
+  - curl --upload-file ./opt/bsqmu/bin/bsqmu https://transfer.sh/bsqmu-git-$(git rev-parse --short HEAD)
