--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get update
 
 install:
-  - sudo apt-get install qt512base qt512xmlpatterns
+  - sudo apt-get install qt512base qt512xmlpattern libgl1-mesa-dev build-essentials
   - source /opt/qt512/bin/qt512-env.sh
 
 
