--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,10 +6,12 @@ install:
   - set QTDIR=C:\Qt\5.12.2\mingw73_32
   - set PATH=%QTDIR%\bin;C:\Qt\Tools\mingw530_32\bin;%PATH%
 build_script:
+  - dir /adh
   - qmake bsqmu.pro
   - mingw32-make
 after_build:
   - windeployqt release/bsqmu.exe
+  - dir /adh
 
 artifacts:
   - path: release\bsqmu.exe
